--- a/Twitter.Core/Twitter.Core.csproj
+++ b/Twitter.Core/Twitter.Core.csproj
@@ -4,4 +4,7 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Memstate.All" Version="0.6.1" />
+  </ItemGroup>
 </Project>
