--- a/Twitter.Web/Twitter.Web.csproj
+++ b/Twitter.Web/Twitter.Web.csproj
@@ -6,6 +6,10 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
+    <PackageReference Include="Memstate.All" Version="0.6.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Twitter.Core\Twitter.Core.csproj" />
+  </ItemGroup>
 </Project>
